feat: add stress testing framework with multiple test cases for high concurrency scenarios